--- a/discipleship.html
+++ b/discipleship.html
@@ -16,9 +16,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   
   <title>Discipleship</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=3923171601"/>
-  <link rel="stylesheet" type="text/css" href="css/discipleship.css?crc=4000401201" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=517215909"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=368304127"/>
+  <link rel="stylesheet" type="text/css" href="css/discipleship.css?crc=334082573" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -28,7 +28,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/PLVCdjBvTwveC3ipSPToa1zOdxQWm5uoXaNh9gnkgjXfeCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFhzMsMMeMw6MqGIQWmDZZMgxnz_3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/5qky1sJNbTkVJPG1qbCc7GRaIOi26EFQxIgfwD8rrVJfeCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFhzMsMMeMw6MqGIQWmDZZMgG7Rr3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -39,6 +39,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 
   <div class="clearfix borderbox" id="page"><!-- group -->
    <div class="PamphletWidget clearfix grpelem" id="pamphletu20396"><!-- none box -->
+    <div class="ThumbGroup clearfix grpelem" id="u20398"><!-- none box -->
+     <div class="popup_anchor" id="u20399popup">
+      <div class="Thumb popup_element clearfix" id="u20399"><!-- column -->
+       <div class="colelem" id="u20401"><!-- simple frame --></div>
+       <div class="colelem" id="u20402"><!-- simple frame --></div>
+       <div class="colelem" id="u20400"><!-- simple frame --></div>
+      </div>
+     </div>
+    </div>
     <div class="popup_anchor" id="u20403popup">
      <div class="ContainerGroup clearfix" id="u20403"><!-- stack box -->
       <div class="Container invi clearfix grpelem" id="u20404"><!-- group -->
@@ -61,34 +70,44 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="ThumbGroup clearfix grpelem" id="u20398"><!-- none box -->
-     <div class="popup_anchor" id="u20399popup">
-      <div class="Thumb popup_element clearfix" id="u20399"><!-- column -->
-       <div class="colelem" id="u20401"><!-- simple frame --></div>
-       <div class="colelem" id="u20402"><!-- simple frame --></div>
-       <div class="colelem" id="u20400"><!-- simple frame --></div>
+   </div>
+   <div class="clearfix grpelem" id="pu29211"><!-- column -->
+    <div class="clearfix colelem" id="u29211"><!-- column -->
+     <!-- m_editable region-id="editable-static-tag-U17949-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u17949-7" href="abcd.html" data-href="page:U18803" data-muse-uid="U17949" data-muse-type="txt_frame"><!-- content --><p id="u17949-5"><span id="u17949">ABCD of Following Jesus</span><span id="u17949-3"><br/></span><span id="u17949-4">The ABCD of following Jesus is designed to help people quickly pick up what it means to be a disciple of Christ. There are many other aspects following Jesus that come with time and knowledge but these are 4 basic elements that will stimulate consistent growth in Christ.</span></p></a>
+     <!-- /m_editable -->
+     <div class="clearfix colelem" id="u29141"><!-- group -->
+      <div class="clearfix grpelem" id="pu28910"><!-- column -->
+       <!-- m_editable region-id="editable-static-tag-U28910-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+       <a class="nonblock nontext rounded-corners clip_frame colelem" id="u28910" href="a.html" data-href="page:U29579" data-muse-uid="U28910"><!-- svg --><img class="svg" id="u28908" src="images/pasted-svg-442x442.svg?crc=3851854807" alt="" data-mu-svgfallback="images/pasted%20svg%20442x442_poster_.png?crc=428143309" data-image-width="442" data-image-height="442"/></a>
+       <!-- /m_editable -->
+       <!-- m_editable region-id="editable-static-tag-U28988-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+       <a class="nonblock nontext rounded-corners clip_frame colelem" id="u28988" href="c.html" data-href="page:U30787" data-muse-uid="U28988"><!-- svg --><img class="svg" id="u28986" src="images/pasted-svg-442x4422.svg?crc=4035470560" alt="" data-mu-svgfallback="images/pasted%20svg%20442x442_poster_2.png?crc=168053251" data-image-width="442" data-image-height="442"/></a>
+       <!-- /m_editable -->
+      </div>
+      <div class="clearfix grpelem" id="pu28979"><!-- column -->
+       <!-- m_editable region-id="editable-static-tag-U28979-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+       <a class="nonblock nontext rounded-corners clip_frame colelem" id="u28979" href="b.html" data-href="page:U30753" data-muse-uid="U28979"><!-- svg --><img class="svg" id="u28977" src="images/pasted-svg-442x4423.svg?crc=4022693321" alt="" data-mu-svgfallback="images/pasted%20svg%20442x442_poster_3.png?crc=4223545813" data-image-width="442" data-image-height="442"/></a>
+       <!-- /m_editable -->
+       <!-- m_editable region-id="editable-static-tag-U28997-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+       <a class="nonblock nontext rounded-corners clip_frame colelem" id="u28997" href="d.html" data-href="page:U30821" data-muse-uid="U28997"><!-- svg --><img class="svg" id="u28995" src="images/pasted-svg-442x4424.svg?crc=45327515" alt="" data-mu-svgfallback="images/pasted%20svg%20442x442_poster_4.png?crc=267672148" data-image-width="442" data-image-height="442"/></a>
+       <!-- /m_editable -->
       </div>
      </div>
     </div>
-    <div class="popup_anchor" id="u20418popup">
-     <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix" id="u20418"><!-- group -->
-      <div class="grpelem" id="u20419" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=0.7071,M21=-0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9"><!-- simple frame --></div>
-      <div class="grpelem" id="u20420" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=-0.7071,M21=0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9"><!-- simple frame --></div>
-     </div>
-    </div>
+    <!-- m_editable region-id="editable-static-tag-U18013-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u18013-10" href="bible-questions.html" data-href="page:U18781" data-muse-uid="U18013" data-muse-type="txt_frame"><!-- content --><p id="u18013-8"><span id="u18013">Bible Questions</span><span id="u18013-3"><br/></span><span id="u18013-7">Tools to go deeper in our bible reading.<br/>Tools to go deeper in our bible reading.</span></p></a>
+    <!-- /m_editable -->
    </div>
-   <!-- m_editable region-id="editable-static-tag-U17949-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-   <a class="nonblock nontext rgba-background rounded-corners clearfix grpelem" id="u17949-10" href="evangelism.html" data-href="page:U18494" data-muse-uid="U17949" data-muse-type="txt_frame"><!-- content --><p id="u17949-8"><span id="u17949">Evangelism Questions</span><span id="u17949-3"><br/></span><span id="u17949-7">Tools to go deeper in our conversations.<br/>Tools to go deeper in our conversations.</span></p></a>
-   <!-- /m_editable -->
-   <!-- m_editable region-id="editable-static-tag-U18013-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-   <a class="nonblock nontext rgba-background rounded-corners clearfix grpelem" id="u18013-10" href="bible-questions.html" data-href="page:U18781" data-muse-uid="U18013" data-muse-type="txt_frame"><!-- content --><p id="u18013-8"><span id="u18013">Bible Questions</span><span id="u18013-3"><br/></span><span id="u18013-7">Tools to go deeper in our bible reading.<br/>Tools to go deeper in our bible reading.</span></p></a>
-   <!-- /m_editable -->
    <div class="clearfix grpelem" id="pu18022-10"><!-- column -->
     <!-- m_editable region-id="editable-static-tag-U18022-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u18022-10" href="keys-to-discipleship.html" data-href="page:U18803" data-muse-uid="U18022" data-muse-type="txt_frame"><!-- content --><p id="u18022-8"><span id="u18022-3">Keys to Discipleship<br/></span><span id="u18022-7">Tools to go deeper in our conversations.<br/>Tools to go deeper in our conversations.</span></p></a>
+    <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u18022-10" href="abcd.html" data-href="page:U18803" data-muse-uid="U18022" data-muse-type="txt_frame"><!-- content --><p id="u18022-8"><span id="u18022-3">evangelism questions<br/></span><span id="u18022-7">Tools to go deeper in our conversations.<br/>Tools to go deeper in our conversations.</span></p></a>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U18031-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
     <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u18031-10" href="tithing.html" data-href="page:U18825" data-muse-uid="U18031" data-muse-type="txt_frame"><!-- content --><p id="u18031-8"><span id="u18031-3">Tithing<br/></span><span id="u18031-7">What Does this even means<br/>How can I tithe?</span></p></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U31570-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u31570-4" href="resources.html" data-href="page:U31596" data-muse-uid="U31570" data-muse-type="txt_frame"><!-- content --><p id="u31570-2"><span id="u31570">Other Helpful Resources</span></p></a>
     <!-- /m_editable -->
    </div>
    <a class="anchor_item grpelem" id="top"></a>
@@ -100,7 +119,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- /m_editable -->
     <div class="colelem" id="u6188"><!-- simple frame --></div>
    </div>
-   <div class="verticalspacer" data-offset-top="441" data-content-above-spacer="441" data-content-below-spacer="81"></div>
+   <div class="verticalspacer" data-offset-top="1376" data-content-above-spacer="1375" data-content-below-spacer="80"></div>
    <a class="nonblock nontext clearfix grpelem" id="u5290-4" href="index.html" data-href="page:U782"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
   </div>
   <!-- Other scripts -->
