--- a/resources.html
+++ b/resources.html
@@ -11,14 +11,18 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "openlife.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "resources.css"], "outOfDate":[]};
 </script>
   
-  <title>OpenLife</title>
+  <title>Resources</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=517215909"/>
   <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=368304127"/>
-  <link rel="stylesheet" type="text/css" href="css/openlife.css?crc=314909689" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/resources.css?crc=4023944482" id="pagesheet"/>
+  <!-- IE-only CSS -->
+  <!--[if lt IE 9]>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=2080246" id="nomq_pagesheet"/>
+  <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -28,7 +32,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/dztnitxpsWO3lVMufaSm3_rAixhB591nvWRB89oEUKwfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMgTHRr3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/OvC-wrdlYimOEKC8pPF-RFAP375llexejAV9KFH0_KXfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMg37Rr3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -38,46 +42,43 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="ppamphletu20396"><!-- group -->
-    <div class="PamphletWidget clearfix grpelem" id="pamphletu20396"><!-- none box -->
-     <div class="ThumbGroup clearfix grpelem" id="u20398"><!-- none box -->
-      <div class="popup_anchor" id="u20399popup">
-       <div class="Thumb popup_element clearfix" id="u20399"><!-- column -->
-        <div class="colelem" id="u20401"><!-- simple frame --></div>
-        <div class="colelem" id="u20402"><!-- simple frame --></div>
-        <div class="colelem" id="u20400"><!-- simple frame --></div>
-       </div>
+   <div class="PamphletWidget clearfix grpelem" id="pamphletu20396"><!-- none box -->
+    <div class="ThumbGroup clearfix grpelem" id="u20398"><!-- none box -->
+     <div class="popup_anchor" id="u20399popup">
+      <div class="Thumb popup_element clearfix" id="u20399"><!-- column -->
+       <div class="colelem" id="u20401"><!-- simple frame --></div>
+       <div class="colelem" id="u20402"><!-- simple frame --></div>
+       <div class="colelem" id="u20400"><!-- simple frame --></div>
       </div>
      </div>
-     <div class="popup_anchor" id="u20403popup">
-      <div class="ContainerGroup clearfix" id="u20403"><!-- stack box -->
-       <div class="Container invi clearfix grpelem" id="u20404"><!-- group -->
-        <div class="clearfix grpelem" id="pu20416-3"><!-- column -->
-         <a class="nonblock nontext clearfix colelem" id="u20416-3" href="index.html" data-href="page:U782"><!-- content --><p>&nbsp;</p></a>
-         <a class="nonblock nontext clearfix colelem" id="u22578-4" href="featured.html" data-href="page:U19221"><!-- content --><p id="u22578-2">FEATURED</p></a>
-         <a class="nonblock nontext clip_frame colelem" id="u20414" href="http://gawleruniting.org.au"><!-- svg --><img class="svg" id="u20415" src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60"/></a>
-        </div>
-        <a class="nonblock nontext clearfix grpelem" id="u20408-4" href="bible-readings.html" data-href="page:U7278"><!-- content --><p id="u20408-2">READINGS</p></a>
-        <div class="clearfix grpelem" id="pu22548-4"><!-- column -->
-         <a class="nonblock nontext clearfix colelem" id="u22548-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u22548-2">SERMONS</p></a>
-         <a class="nonblock nontext clearfix colelem" id="u22554-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u22554-2">DISCIPLESHIP</p></a>
-         <a class="nonblock nontext clearfix colelem" id="u22560-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u22560-2">EVENTS</p></a>
-         <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u22572-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u22572-2">OPENLIFE</p></a>
-         <div class="clearfix colelem" id="pu20406"><!-- group -->
-          <a class="nonblock nontext clip_frame grpelem" id="u20406" href="https://www.facebook.com/gawlerunitingchurch"><!-- svg --><img class="svg" id="u20407" src="images/pasted-svg-109665x1092.svg?crc=223350899" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_2.png?crc=4111301327" data-image-width="60" data-image-height="60"/></a>
-          <a class="nonblock nontext clip_frame grpelem" id="u20412" href="tel:(08)85225269"><!-- svg --><img class="svg" id="u20413" src="images/pasted-svg-109665x1093.svg?crc=4186153669" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_3.png?crc=4204566227" data-image-width="60" data-image-height="60"/></a>
-         </div>
+    </div>
+    <div class="popup_anchor" id="u20403popup">
+     <div class="ContainerGroup clearfix" id="u20403"><!-- stack box -->
+      <div class="Container invi clearfix grpelem" id="u20404"><!-- group -->
+       <div class="clearfix grpelem" id="pu20416-3"><!-- column -->
+        <a class="nonblock nontext clearfix colelem" id="u20416-3" href="index.html" data-href="page:U782"><!-- content --><p>&nbsp;</p></a>
+        <a class="nonblock nontext clearfix colelem" id="u22578-4" href="featured.html" data-href="page:U19221"><!-- content --><p id="u22578-2">FEATURED</p></a>
+        <a class="nonblock nontext clip_frame colelem" id="u20414" href="http://gawleruniting.org.au"><!-- svg --><img class="svg" id="u20415" src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60"/></a>
+       </div>
+       <a class="nonblock nontext clearfix grpelem" id="u20408-4" href="bible-readings.html" data-href="page:U7278"><!-- content --><p id="u20408-2">READINGS</p></a>
+       <div class="clearfix grpelem" id="pu22548-4"><!-- column -->
+        <a class="nonblock nontext clearfix colelem" id="u22548-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u22548-2">SERMONS</p></a>
+        <a class="nonblock nontext clearfix colelem" id="u22554-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u22554-2">DISCIPLESHIP</p></a>
+        <a class="nonblock nontext clearfix colelem" id="u22560-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u22560-2">EVENTS</p></a>
+        <a class="nonblock nontext clearfix colelem" id="u22572-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u22572-2">OPENLIFE</p></a>
+        <div class="clearfix colelem" id="pu20406"><!-- group -->
+         <a class="nonblock nontext clip_frame grpelem" id="u20406" href="https://www.facebook.com/gawlerunitingchurch"><!-- svg --><img class="svg" id="u20407" src="images/pasted-svg-109665x1092.svg?crc=223350899" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_2.png?crc=4111301327" data-image-width="60" data-image-height="60"/></a>
+         <a class="nonblock nontext clip_frame grpelem" id="u20412" href="tel:(08)85225269"><!-- svg --><img class="svg" id="u20413" src="images/pasted-svg-109665x1093.svg?crc=4186153669" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_3.png?crc=4204566227" data-image-width="60" data-image-height="60"/></a>
         </div>
        </div>
       </div>
      </div>
     </div>
-    <a class="anchor_item grpelem" id="top"></a>
    </div>
-   <div class="clearfix grpelem" id="pu5666-4"><!-- column -->
-    <!-- m_editable region-id="editable-static-tag-U5666-BP_infinity" template="openlife.html" data-type="html" data-ice-options="disableImageResize,link" -->
-    <div class="Title clearfix colelem" id="u5666-4" data-muse-uid="U5666" data-muse-type="txt_frame"><!-- content -->
-     <h1>OpenLife Groups</h1>
+   <div class="clearfix grpelem" id="pu31675-4"><!-- column -->
+    <!-- m_editable region-id="editable-static-tag-U31675-BP_infinity" template="resources.html" data-type="html" data-ice-options="disableImageResize,link" -->
+    <div class="Title clearfix colelem" id="u31675-4" data-muse-uid="U31675" data-muse-type="txt_frame"><!-- content -->
+     <h1>Resources</h1>
     </div>
     <!-- /m_editable -->
     <div class="colelem" id="u6188"><!-- simple frame --></div>
